project(thread_test)
add_definitions(-std=c++11)
set(SRC_LIST thread.cpp)
FILE(GLOB SRC_LIST ${PROJECT_SOURCE_DIR}/*.cpp)
#FILE(GLOB_RECURSE SRC_LIST ${PROJECT_SOURCE_DIR}/src/*.cpp)
message(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
message(STATUS "This is SOURCE dir "${PROJECT_SOURCE_DIR})
add_executable(thread_test ${SRC_LIST})
target_link_libraries(thread_test pthread)
